# tileme

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  compose.yaml
.cargo/: config.toml
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.jsx  main.tsx  styles.css  types.ts
frontend/src/components/: ImportPanel.tsx  JobRow.tsx  MapPanels.tsx
frontend/src/utils/: formatters.ts
migrations/: 0001_app_metadata.sql  0001_initial.sql  0002_add_address_country.sql  0002_osm_schema.sql  0002_transit_routes.sql  0003_raster_cache.sql  0004_osm_pois.sql  0005_drop_raster_cache.sql  0006_drop_vector_cache.sql
osm2pgsql/: flex.lua
src/: app.rs  config.rs  db.rs  error.rs  identify.rs  imports.rs  main.rs  metrics.rs  raster.rs  search.rs  static_assets.rs  tiles.rs  trace.rs
